# RouteLang

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DESIGN.md  DESIGN_BACKEND_SPLIT.md  DISPATCH_PERF.md  TODO.md  design_cn.md  dev.sh
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_art_jit_spike.cc  bench_bench_demo.cc  bench_connection.cc  bench_dispatch_compare.cc  bench_first_byte_filter.cc  bench_http_parser.cc  bench_route_art.cc  bench_route_trie.cc  bench_scan_uri.cc  bench_simd_linear.cc
docs/: debugging.md  decorators.md  for-loops.md  match.md  pipe.md  testing.md  wait.md
examples/: dual_backend.cc  fp_callback.cc
include/core/: expected.h
include/rout/: test.h
include/rout/common/: buffer.h  types.h
include/rout/compiler/: lexer.h  rir.h  rir_builder.h  rir_printer.h
include/rout/runtime/: arena.h  callbacks.h  connection.h  epoll_backend.h  error.h  event_loop.h  http_parser.h  io_backend.h  io_event.h  io_uring_backend.h  route_table.h  shard.h  slab_pool.h  slice_pool.h  socket.h  timer_wheel.h  upstream_pool.h
include/rut/common/: buffer.h  http_header_validation.h  types.h  wait_limits.h
include/rut/compiler/: analyze.h  ast.h  diagnostic.h  hir.h  lexer.h  lower_rir.h  mir.h  mir_build.h  parser.h  rir.h  rir_builder.h  rir_printer.h
include/rut/jit/: art_jit_codegen.h  codegen.h  handler_abi.h  jit_engine.h  runtime_helpers.h
include/rut/runtime/: access_log.h  arena.h  callbacks.h  callbacks_impl.h  chunked_parser.h  compile_to_config.h  connection.h  connection_base.h  cpu_caps.h  debug.h  drain.h  epoll_backend.h  epoll_event_loop.h  error.h  event_loop.h  http_parser.h  io_backend.h  io_event.h  io_uring_backend.h  iouring_event_loop.h  jit_dispatch.h  metrics.h  route_art.h  route_byte_radix.h  route_canon.h  route_dispatch.h  route_hash_first_seg.h  route_hash_full.h  route_method.h  route_params.h  route_select.h  route_table.h  route_trie.h  shard.h  shard_control.h  sim_engine.h  slab_pool.h  slice_pool.h  socket.h  timer_wheel.h  (+4 more)
include/rut/sim/: simulate_engine.h
scripts/: coverage_report.py
src/: CMakeLists.txt  main.cc  placement_new.cc
src/compiler/: analyze.cc  lexer.cc  lower_rir.cc  mir_build.cc  parser.cc  rir_printer.cc
src/jit/: art_jit_codegen.cc  codegen.cc  jit_engine.cc  runtime_helpers.cc
src/runtime/: access_log.cc  arena.cc  callbacks.cc  chunked_parser.cc  cpu_caps.cc  epoll_backend.cc  epoll_tls_hooks.h  http_parser.cc  io_uring_backend.cc  route_art.cc  route_byte_radix.cc  route_dispatch.cc  route_hash_first_seg.cc  route_hash_full.cc  route_select.cc  route_trie.cc  shard.cc  socket.cc  timer_wheel.cc  tls.cc  traffic_capture.cc
src/runtime/simd/: avx2.cc  avx512.cc  char_tables.h  neon.cc  route_linear_avx2.cc  route_linear_avx512.cc  route_linear_neon.cc  route_linear_sse2.cc  scalar.cc  simd.h  sse2.cc  sve.cc
src/sim/: main.cc  simulate_engine.cc
test/: test_expected.cpp
test/fixtures/llhttp/: lenient-header-value-relaxed.md  method.md
testing/: bench.h  epoll_tls_test_hooks.h  fault_injection.cc  fault_injection.h  perf_counters.h  test.h
tests/: CMakeLists.txt  epoll_tls_test_hooks.cc  epoll_tls_test_hooks.h  mock_backend.h  test_access_log.cc  test_arena.cc  test_buffer.cc  test_chunked_parser.cc  test_debug.cc  test_drain.cc  test_expected.cc  test_fault_injection.cc  test_framework.cc  test_frontend.cc  test_helpers.h  test_http_parser.cc  test_integration.cc  test_jit.cc  test_metrics.cc  test_network.cc  test_perf_counters.cc  test_rir.cc  test_route_art.cc  test_route_byte_radix.cc  test_route_hash_first_seg.cc  test_route_hash_full.cc  test_route_select.cc  test_route_simd_linear.cc  test_route_trie.cc  test_shard_control.cc  test_sim.cc  test_simulate_engine.cc  test_traffic_capture.cc  test_traffic_replay.cc  test_types.cc
tests/fixtures/: localhost_cert.pem  localhost_key.pem
tests/testdata/: README.md  localhost_cert.pem  localhost_key.pem
